# crs-server

./: Cargo.toml  README.md  nexthead.json  proof0.json  riscv32im-succinct-zkvm-elf  zkgen2.json
data/: genesis.json
src/: main.rs  tm_rpc_utils.rs  utils.rs
