[package]
name = "crs-server"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5.0.1"
clap = {version="4.5.18", features=["derive"]}
actix-web = "4.9.0"
actix-files = "0.6.6"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
celestia-types = {git="https://github.com/eigerco/lumina.git"}
celestia-rpc = {git="https://github.com/eigerco/lumina.git"}
tokio = {version="1.40.0", features=["rt", "rt-multi-thread", "macros", "signal"]}
sp1-sdk = "3.0.0-rc1"
serde_cbor = "0.11.2"
tendermint = { version = "0.35.0", default-features = false }
subtle-encoding = "0.5.1"
tendermint-light-client-verifier = { version = "0.35.0", default-features = false, features = [
    "rust-crypto",
] }
reqwest = { version = "0.11", features = ["json"] }
bincode = "1.3.3"
hex = "0.4.3"